# DEMSI_newLAMMPS

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  README.rst  build  cmake_install.cmake  demsi
DATA/: .gitignore  README  download.xml  get_data.py
Icepack/columnphysics/: icepack_aerosol.mod  icepack_age.mod  icepack_algae.mod  icepack_atmo.mod  icepack_brine.mod  icepack_firstyear.mod  icepack_flux.mod  icepack_intfc.mod  icepack_itd.mod  icepack_kinds.mod  icepack_mechred.mod  icepack_meltpond_cesm.mod  icepack_meltpond_lvl.mod  icepack_meltpond_topo.mod  icepack_mushy_physics.mod  icepack_ocean.mod  icepack_orbital.mod  icepack_parameters.mod  icepack_shortwave.mod  icepack_therm_0layer.mod  icepack_therm_bl99.mod  icepack_therm_itd.mod  icepack_therm_mushy.mod  icepack_therm_shared.mod  icepack_therm_vertical.mod  icepack_tracers.mod  icepack_warnings.mod  icepack_zbgc.mod  icepack_zbgc_shared.mod  icepack_zsalinity.mod
LAMMPS-install/lib/: libkokkoscontainers.so.3.1.1
LAMMPS-install/lib64/: libkokkoscontainers.so.3.1.1  libkokkoscore.so.3.1.1
LAMMPS/cmake/: CMakeLists.txt
LAMMPS/src/: .special.cpp.swo  atom.cpp  atom.h  atom_masks.h  special.cpp
LAMMPS/tmp/: LAMMPS-cfgcmd.txt
aux/: do-config-demsi.sh  do-config-netcdf.sh
dashboards/: demsi_ctest.cmake  snl_helpers.cmake
dashboards/cee-compute011.sandia.gov/: CTestConfig.cmake  Project.xml  cron-file.txt  nightly_cron_script.sh  nightly_ctest.cmake
docs/: Doxyfile
docs/source/: conf.py  developer_guide.rst  index.rst  io.rst  maintainer_guide.rst  prerequisites.rst  quick_start.rst  testcases.rst  (+1 more)
hooks/: pre-rebase.sample  prepare-commit-msg.sample
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  demsi.cpp  demsi_column.cpp  demsi_column_variables.cpp  demsi_column_variables.h  demsi_configs.cpp  demsi_configs.h  demsi_contacts.cpp  demsi_diagnostics.h  demsi_external_force.cpp  demsi_external_force.h  demsi_file_utils.cpp  demsi_file_utils.h  demsi_forcing.cpp  demsi_grid.cpp  demsi_grid.h  demsi_grid_io.h  demsi_initial_tessellation.h  demsi_initial_tessellation_io.cpp  demsi_kokkosparser.h  demsi_logging.cpp  demsi_ocean.cpp  demsi_ocean.h  demsi_particles.cpp  demsi_particles.h  demsi_polygon.h  demsi_remapping.cpp  demsi_remapping_obr.cpp  demsi_ridging.F90  demsi_time.cpp  demsi_time.h  demsi_tinyxml2.cpp  demsi_tinyxml2.h
src/OLD/: demsi_column.h  demsi_column_icepack.F90  demsi_column_tracers.cpp  demsi_column_tracers.h  demsi_column_transfer.cpp  demsi_column_variables_allocation.inc  demsi_column_variables_declaration.inc  demsi_communication.cpp  demsi_communication.h  demsi_contacts.h  demsi_diagnostics.cpp  demsi_external_force.cpp  demsi_forcing.h  demsi_grid.cpp  demsi_grid.h  demsi_grid_io.cpp  demsi_initial_tessellation.cpp  demsi_initial_tessellation_io.h  demsi_interpolation.cpp  demsi_interpolation.h  demsi_kokkosparser.cpp  demsi_lmp_instance.cpp  demsi_lmp_instance.h  demsi_logging.h  demsi_particles_io.cpp  demsi_particles_io.h  demsi_partition.cpp  demsi_partition.h  demsi_polygon.cpp  demsi_remapping.h  demsi_remapping_debug.cpp  demsi_remapping_flux.cpp  demsi_ridging.cpp  demsi_typedefs.h
src/extra/: demsi_grid_io.cpp
testcases/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
testcases/arctic_basin/: .gitignore  CTestTestfile.cmake  Makefile  README.rst  area_ratio.py  cmake_install.cmake  config.xml  config_all.xml  config_all_no_ice.xml  config_column.xml  config_hopkins.xml  config_ridging.xml  make_testcase.py  make_testcase_forcing.py  make_testcase_init.py  make_testcase_ocean_forcing.py
testcases/cantilever_lattice/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.rst  analyze_cantilever_equilibrium.py  cmake_install.cmake  config_break.xml  config_nobreak.xml  config_nobreak_equilibrium.xml  make_testcase.py
testcases/one_dimensional_ridging/: CMakeLists.txt  CTestTestfile.cmake  Makefile  analyze.py  cmake_install.cmake  config.xml  make_testcase.py  plot_movement.py  plot_thicknesses.py
testcases/particle_to_grid_interp/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.xml  make_testcase.py  part_to_grid_test.cpp
testcases/ridging_island/: .gitignore  CTestTestfile.cmake  Makefile  README.rst  cmake_install.cmake  config.xml  config_ridging.xml  make_testcase.py
testcases/single_particle/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.rst  check_testcase_output.py  cmake_install.cmake  config.xml  make_testcase.py
testcases/single_particle_column/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.rst  cmake_install.cmake  compare_output.py  compare_remap.py  config.xml  config_init_ocean.xml  config_remap.xml  make_testcase.py  plot_column_output.py  varnames.txt
testcases/single_particle_stability/: .gitignore  README  config_thick.xml  config_thin.xml  make_testcase.py  plot_particle_motion.py
testcases/two_dimensional_ridging/: README.rst  config.xml  make_testcase.py
testcases/two_particles/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.rst  analyze_bond_failure.py  cmake_install.cmake  config_bonded_compression.xml  config_bonded_compression_force.xml  config_bonded_compression_shear.xml  config_bonded_rotate.xml  config_bonded_shear.xml  config_bonded_tension.xml  config_bonded_tension_shear.xml  config_unbonded_compression_force.xml  make_movies.py  make_testcase.py
testcases/uniform_stress/: .gitignore  CTestTestfile.cmake  Makefile  README.rst  cmake_install.cmake  config.xml  make_testcase.py  plot_bond_timeseries.py  plot_bonds.py  plot_connected_region_timeseries.py  plot_connected_regions.py
testcases/vortex/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.rst  cmake_install.cmake  config_fixed_forcing.xml  config_fixed_forcing_periodic.xml  config_fixed_forcing_random.xml  config_fixed_forcing_random_init.xml  config_fixed_forcing_stability.xml  config_varying_forcing.xml  make_testcase.py
(+228 files in other folders)
