add_subdirectory(vortex)
add_subdirectory(particle_to_grid_interp)
add_subdirectory(cantilever_lattice)
add_subdirectory(two_particles)
add_subdirectory(single_particle)
add_subdirectory(single_particle_column)
add_subdirectory(one_dimensional_ridging)
add_subdirectory(ridging_island)
add_subdirectory(uniform_stress)
add_subdirectory(arctic_basin)
